// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c6 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c6,
[aria-selected="true"] .c6 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c4 {
  position: relative;
  z-index: 1;
}

.c11 {
  position: relative;
  z-index: 1;
  border-top: 1px solid #bbcadf;
}

.c8 {
  padding: 1.6rem;
  -webkit-animation: bcCCNc 250ms ease-in;
  animation: bcCCNc 250ms ease-in;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c5:hover,
.c5:focus,
.c5:focus-within,
.c5[aria-expanded="true"] {
  color: #3e486e;
}

.c7 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c10 > *:first-child {
  margin-top: 0;
}

.c10 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c8 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c12 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      titre 0
    </h2>
  </header>
  <p>
    paragraphe 0
  </p>
  <div
    class="c3"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class="c4"
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-0"
            aria-disabled="false"
            aria-expanded="false"
            class="c5"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-0"
            role="button"
            tabindex="0"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              titre 1
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-0"
          class="c8"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-0"
        >
          <div
            class="c9"
          >
            <header
              class="c0"
            >
              <h2
                class="c1"
              >
                <div
                  class="c2"
                />
                titre 1
              </h2>
            </header>
          </div>
          <div
            class="c10"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c11"
        data-accordion-component="AccordionItem"
        index="1"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-1"
            aria-disabled="false"
            aria-expanded="false"
            class="c5"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-1"
            role="button"
            tabindex="0"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              titre 2
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-1"
          class="c8"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-1"
        >
          <div
            class="c9"
          >
            <header
              class="c0"
            >
              <h2
                class="c1"
              >
                <div
                  class="c2"
                />
                titre 2
              </h2>
            </header>
          </div>
          <div
            class="c10"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h3
              class="c12"
            >
              titre 2-1
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c11"
        data-accordion-component="AccordionItem"
        index="2"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-2"
            aria-disabled="false"
            aria-expanded="false"
            class="c5"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-2"
            role="button"
            tabindex="0"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              titre 3
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-2"
          class="c8"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-2"
        >
          <div
            class="c9"
          >
            <header
              class="c0"
            >
              <h2
                class="c1"
              >
                <div
                  class="c2"
                />
                titre 3
              </h2>
            </header>
          </div>
          <div
            class="c10"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
.c7:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c4 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c4,
[aria-selected="true"] .c4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c2 {
  position: relative;
  z-index: 1;
}

.c9 {
  position: relative;
  z-index: 1;
  border-top: 1px solid #bbcadf;
}

.c6 {
  padding: 1.6rem;
  -webkit-animation: bcCCNc 250ms ease-in;
  animation: bcCCNc 250ms ease-in;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c3:hover,
.c3:focus,
.c3:focus-within,
.c3[aria-expanded="true"] {
  color: #3e486e;
}

.c5 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c1 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c6 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <h5
    class="c0"
  >
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="c1"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class="c2"
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-3"
            aria-disabled="false"
            aria-expanded="false"
            class="c3"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-3"
            role="button"
            tabindex="0"
          >
            <svg
              class="c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              titre 1
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-3"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-3"
        >
          <div
            class="c7"
          >
            <h5
              class="c0"
            >
              titre 1
            </h5>
          </div>
          <div
            class="c8"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c9"
        data-accordion-component="AccordionItem"
        index="1"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-4"
            aria-disabled="false"
            aria-expanded="false"
            class="c3"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-4"
            role="button"
            tabindex="0"
          >
            <svg
              class="c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              titre 2
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-4"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-4"
        >
          <div
            class="c7"
          >
            <h5
              class="c0"
            >
              titre 2
            </h5>
          </div>
          <div
            class="c8"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h6
              class="c0"
            >
              titre 2-1
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c9"
        data-accordion-component="AccordionItem"
        index="2"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-5"
            aria-disabled="false"
            aria-expanded="false"
            class="c3"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-5"
            role="button"
            tabindex="0"
          >
            <svg
              class="c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              titre 3
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-5"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-5"
        >
          <div
            class="c7"
          >
            <h5
              class="c0"
            >
              titre 3
            </h5>
          </div>
          <div
            class="c8"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
